--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "build": "prisma generate && node run start"
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
